--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,14 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
-tagline: Site Tagline
-author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-  feedburner : feedname
+title : 默默达
+tagline: 我能挥霍的只有时间了
+author : Fran Wang
+  name : 王狗蛋
+  email : wanggoudaner@gmail.com
+  github : franzzzz
+  twitter : franwang
+  feedburner : 
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
