--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-encoding: utf-8
+
 # This is the default format. 
 # For more see: http://jekyllrb.com/docs/permalinks/
 permalink: /:categories/:year/:title 
@@ -26,7 +26,7 @@ author : Fran Wang
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.io
+production_url : http://franzzzz.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
