--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-
+encoding: utf-8
 # This is the default format. 
 # For more see: http://jekyllrb.com/docs/permalinks/
 permalink: /:categories/:year/:title 
