尝试中文标题

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : abc
+title : 狗蛋的一天
 tagline: def
 author : 
   name : franwang
