全中文修改

--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@ pygments: true
 # so be sure to set them if your theme uses them.
 #
 title : 狗蛋的一天
-tagline: def
+tagline: 我能挥霍的只有时间了
 author : 
-  name : franwang
+  name : 王狗蛋
   email : wanggoudaner@gmail.com
   github : franzzzz
   twitter : franwang
