--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ pygments: true
 title : 狗蛋的一天
 tagline: 我能挥霍的只有时间了
 author : 
-  name : 王狗蛋
+  name : Fran Wang
   email : wanggoudaner@gmail.com
   github : franzzzz
   twitter : WangNianTao
