--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ encoding: utf-8
 img_url: http://franzzzz.github.com/assets/images
 # This is the default format. 
 # For more see: http://jekyllrb.com/docs/permalinks/
-permalink: /:categories/:year/:title 
+permalink: /:categories/:year/:month/:day/:title
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 pygments: true
