改大标题 改名

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : 砖石王狗蛋点点学
+title : 王狗蛋想更就更
 tagline: 我能挥霍的只有时间了
 author : 
   name : Fran Wang
