--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : 王狗蛋想更就更
+title : 王狗蛋的记事本
 tagline: 我能挥霍的只有时间了
 author : 
   name : Fran Wang
