--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 encoding: utf-8
 markdown: kramdown
-img_url: http://franzzzz.github.com/assets/images
+img_url: https://raw.github.com/franzzzz/franzzzz.github.com/master/assets/images
 # This is the default format. 
 # For more see: http://jekyllrb.com/docs/permalinks/
-permalink: /:categories/:year/:month/:day/:title
+permalink: /:categories/:year-:month/:day/:title
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 pygments: true
