--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : 王狗蛋的记事本
+title : 王狗蛋
 tagline: 种一棵树最好的是十年前，其次是现在
 author : 
   name : Fran Wang
