--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ title : 王狗蛋
 tagline: 种一棵树最好的是十年前，其次是现在
 author : 
   name : Fran Wang
-  email : wanggoudaner@gmail.com
+  email : gmail.com
   github : franzzzz
   twitter : WangGoudan
   feedburner : 
